Actualiza backend y frontend(funcionando dashboard, y base de datos optimizada)